@@ -4,6 +4,10 @@
 	* HACKING: add notes for testing compatibility with GnuCOBOL modules
 	  generated by an earlier version of GnuCOBOL
 
+2022-09-21  Simon Sobisch <simonsobisch@gnu.org>
+
+	* configure.ac: dropped extra check for GCC as done internally
+
 2022-09-08  Simon Sobisch <simonsobisch@gnu.org>
 
 	* configure.ac: cleanup curses library check
@@ -56,6 +60,13 @@
 	  exceptions of to-be-installed headers which include files that have a
 	  local reference to each other after installation (common.h + 
 	  and exceptions.def)
+
+2021-12-30  Simon Sobisch <simonsobisch@gnu.org>
+
+	* configure.ac: early check for usable LDFLAGS + LIBS
+	* configure.ac: option to add MATH_LIBRARY for necessary math functions
+	  (for systems that don't include those in their C library) to LIBCOB_LIBS
+	* configure.ac: only set -g to COB_DEBUG_FLAGS when tested to work
 
 2021-11-02  Simon Sobisch <simonsobisch@gnu.org>
 
